5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1644_2445.log
== TEST (2019-04-11 16:48:40) 
-- CODE:
var= input(" C ou F: ")
temp= float(input("valor da temp: "))

cpf = (1.8*temp)+32
fpc = (temp-32)/1.8

if (var== C):
	print(cpf)
else:
	print(fpc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (var== C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:48:55) 
-- CODE:
var= input(" C ou F: ")
temp= float(input("valor da temp: "))

cpf = (1.8*temp)+32
fpc = (temp-32)/1.8

if (var== C):
	print(cpf)
else:
	print(fpc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (var== C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:48:56) 
-- CODE:
var= input(" C ou F: ")
temp= float(input("valor da temp: "))

cpf = (1.8*temp)+32
fpc = (temp-32)/1.8

if (var== C):
	print(cpf)
else:
	print(fpc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (var== C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:49:12) 
-- CODE:
var= input(" C ou F: ")
temp= float(input("valor da temp: "))

cpf = (1.8*temp)+32
fpc = (temp-32)/1.8

if (var== "C"):
	print(cpf)
else:
	print(fpc)
-- EXECUTION TIME:
0.185052
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
